--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "appliance-control",
   "version": "1.0.0",
   "description": "-",
-  "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "node -r ts-node/register ./src/app.ts",
+    "dev": "nodemon --config nodemon.json",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "diakreado",
@@ -12,10 +13,14 @@
   "private": true,
   "devDependencies": {
     "@types/express": "4.16.1",
+    "@types/node": "^14.14.22",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "tslint": "5.12.1",
     "typescript": "3.3.3"
   },
   "dependencies": {
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "morgan": "^1.10.0"
   }
 }
