--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "typescript": "3.3.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "4.16.4",
+    "helmet": "^4.4.1",
     "morgan": "^1.10.0"
   }
 }
